# CodeReview

./: .dockerignore  .env  .env.sample  .gitignore  DATE_FILTERING.md  Dockerfile  INCLUSIVE_RANGE_FIX.md  README.md  SCANNER_INSTALLATION.md  SECURITY_FIXES.md  SECURITY_SCANNING.md  install_all_scanners.ps1  pyproject.toml
.github/: copilot-instructions.md
src/: config.py  main.py  security_scan.py
src/code_review_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/commit_ingest/: __init__.py  git_repository.py
src/models/: __init__.py  change.py
src/review/: __init__.py  review_agent.py
src/security/: __init__.py  models.py  scanner.py
src/services/: __init__.py  review_service.py
tests/: test_main_llm.py  test_review_service.py
